#85 Bookeepingform date field is acting strange, not showing correct format

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.html
@@ -109,7 +109,12 @@
 </div>
 
 <div id="footer" style="text-align: center">
-    <a href="#" wicket:id="privacy"><wicket:message key="privacy"></wicket:message></a> &#09;&#124;&#09; <a href="#" wicket:id="terms"><wicket:message key="terms"></wicket:message></a>
+    <a href="#" wicket:id="privacy">
+        <wicket:message key="privacy"></wicket:message>
+    </a> &#09;&#124;&#09; <a href="#" wicket:id="terms">
+    <wicket:message key="terms"></wicket:message>
+</a>
+
     <p class="muted credit">&copy; EazyIT 2013</p>
 </div>
 
